fix log and spacing

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -37,7 +37,7 @@
 }
 
 #main-outlet {
-  padding-top: 96px;
+  padding-top: 94px;
   background-color: #fff;
 }
 
